--- a/profiles/templates/profiles/home.html
+++ b/profiles/templates/profiles/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -8,16 +9,29 @@
             <div class="card text-bg-warning mb-3" style="width: 100%;">
                 <div class="card-body">
                   <h5 class="card-title">Check in Form</h5>
-                  <p class="card-text"></p>
+                  <p class="card-text">
+                    <form method=".">
+                        {% csrf_token %}
+                        {{ form |crispy}}
+                    <button class="btn btn-success" type="submit">Save</button>
+                    </form>
+
+                  </p>
                 </div>
             </div>
         </div>
         <div class="col-3">
             <div class="card text-bg-light mb-3" style="width: 100%;">
                 <div class="card-body">
-                    <h1>{{days}}</h1>
-                  <h4>Subscription Left</h4>
-                  <a href="" class="btn btn-secondary">Renew</a>
+                    <div class="row">
+                        <h1 class="text-center">{{days}} <sub>days</sub> </h1></div>
+                    
+                  <h4 class="text-center">Subscription Left</h4>
+                  <br>
+                  <div class="text-right">
+                    <button href="" class="btn btn-secondary ">Renew</button>
+                  </div>
+                  
                 </div>
             </div>
         </div>
