--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="{% url 'profiles:home' %}">My Learning Platform Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">Check in history</a>
+                    <a class="nav-link" href="{% url 'profiles:cerlistview' %}">Check in history</a>
                   </li>
                   <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
